Change structure of program entirely: -Change methods and classes to a text file reading format to save redundant code. -Delete HitterStats.java and PitcherStats.java classes -Minor changes in nameSorter method to deal with abbreviated names.